    (see bug 3531 - http://bugzilla.scilab.org/show_bug.cgi?id=3531)
  + xmltojar, xmltohtml, xmltops, xmltopdf : A list of generated file is returned
    (see request 540 - http://requestzilla.scilab.org/show_bug.cgi?id=540)
  + xmltojar, xmltohtml, xmltops, xmltopdf unitary tests have been added

* More warnings in C/C++/Fortran during the compilation process.
See http://lists.scilab.org/cgi-bin/ezmlm-browse?list=dev&cmd=showmsg&msgnum=684

* libmatio is now detected thanks to pkg-config

* Tests added for functions: umf_luget, taucs_chget, pcg, removedir, rmdir, ones

* Scilab 5.1 uses GIWS 1.0

* 

* rmdir & removedir had problems with the recursive delete under GNU/Linux

* Update of some output strings (standard, warning & error)

* Update of the documentation: error_table

* Update of the example in the dynamic_link modules and in the toolbox skeleton (use the actual filename instead of the .o)

* Update of the russian localization

* bug 3500 fixed - [pcre] match position but no character = no match

* bug 3462 fixed - The match string returned by regexp is not the right one if the subject string contains backslashes.

* bug 3131 fixed - version 'GLIBC_2.4' not found with the binary version under some GNU/Linux distro

* bug 3314 fixed - Poor rounding of real input argument

* bug 3322 fixed - trimmean primitive - rev 27627 - Added verbose option, added unit tests, updated doc.

* bug 3530 fixed - Check that X11/Xlib.h is available since the Tk header needs it

* bug 3529 fixed - rmdir was trying to change the permission on the file/directory. This behavior has been removed.

* bug 3540 fixed - With the linux binary version, a symbolic link of <SCILAB INSTALL PATH>/bin/scilab in /usr/local/bin (for example) did not work.

* bug 3546 fixed - frmag is broken when called with hn given by a vector of coefficients instead of a polynomial.

* bug in the script in charge of the dispatch of localization files fixed (tools/localization/dispatchLocalizationFile.sh)