@@ -53,6 +53,8 @@ See http://lists.scilab.org/cgi-bin/ezmlm-browse?list=dev&cmd=showmsg&msgnum=684
 
 * bug 3529 fixed - rmdir was trying to change the permission on the file/directory. This behavior has been removed.
 
+* bug 3532 fixed - link doesn't manage column vector for "sub-names" argument (as scilab 4.x).
+
 * bug 3540 fixed - With the linux binary version, a symbolic link of <SCILAB INSTALL PATH>/bin/scilab in /usr/local/bin (for example) did not work.
 
 * bug 3546 fixed - frmag is broken when called with hn given by a vector of coefficients instead of a polynomial.
